--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
 	"types": "build/index.d.ts",
 	"scripts": {
 		"build": "rimraf build && tsc",
-		"prepare": "npm run build",
-		"prepublishOnly": "npm test"
+		"prepare": "npm run build"
 	},
 	"keywords": [
 		"knex",
