--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
 	"name": "@cdellacqua/knex-transact",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"description": "transact function that provides a simple mechanism to translate SQL transactions into code",
 	"main": "build/index.js",
 	"types": "build/index.d.ts",
+	"module": "build/index.js",
 	"scripts": {
 		"build": "rimraf build && tsc",
 		"prepare": "npm run build"
@@ -24,7 +25,6 @@
 	"files": [
 		"build/**/*"
 	],
-	"module": "knex-transact",
 	"author": "Carlo Dell'Acqua",
 	"license": "MIT",
 	"devDependencies": {
