--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^14.14.7",
-		"knex": "^0.21.12",
+		"knex": "0.95.4",
 		"rimraf": "^3.0.2",
-		"typescript": "^4.0.5"
+		"typescript": "^4.2.4"
 	},
 	"peerDependencies": {
-		"knex": "^0.21.6"
+		"knex": "^0.95.4"
 	},
 	"dependencies": {
 		"@cdellacqua/serializable-error": "^1.1.0"
