--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
 	"name": "@cdellacqua/knex-transact",
 	"version": "3.0.0",
 	"description": "transact function that provides a simple mechanism to translate SQL transactions into code",
-	"main": "build/index.js",
-	"types": "build/index.d.ts",
+	"main": "build/index.cjs.js",
+	"module": "build/index.esm.js",
+	"type": "module",
 	"scripts": {
-		"build": "rimraf build && tsc",
+		"build": "rimraf build && rollup -c && tsc --declaration --emitDeclarationOnly --declarationDir build",
 		"prepare": "npm run build"
 	},
 	"keywords": [
@@ -24,12 +25,23 @@
 	"files": [
 		"build/**/*"
 	],
+	"exports": {
+		".": {
+			"import": "./build/index.esm.js",
+			"require": "./build/index.cjs.js"
+		},
+		"./package.json": "./package.json"
+	},
 	"author": "Carlo Dell'Acqua",
 	"license": "MIT",
 	"devDependencies": {
+		"@rollup/plugin-commonjs": "^16.0.0",
+		"@rollup/plugin-node-resolve": "^10.0.0",
+		"@rollup/plugin-typescript": "^6.1.0",
 		"@types/node": "^14.14.7",
 		"knex": "0.95.4",
 		"rimraf": "^3.0.2",
+		"rollup": "^2.32.1",
 		"typescript": "^4.2.4"
 	},
 	"peerDependencies": {
