change output file extensions

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "3.0.3",
 	"description": "transact function that provides a simple mechanism to translate SQL transactions into code",
 	"types": "build/index.d.ts",
-	"main": "build/index.cjs.js",
-	"module": "build/index.esm.js",
+	"main": "build/index.cjs",
+	"module": "build/index.js",
 	"type": "module",
 	"scripts": {
 		"build": "rimraf build && rollup -c && tsc --declaration --emitDeclarationOnly --declarationDir build",
@@ -28,8 +28,8 @@
 	],
 	"exports": {
 		".": {
-			"import": "./build/index.esm.js",
-			"require": "./build/index.cjs.js"
+			"import": "./build/index.js",
+			"require": "./build/index.cjs"
 		},
 		"./package.json": "./package.json"
 	},
