--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
 		"@rollup/plugin-node-resolve": "^10.0.0",
 		"@rollup/plugin-typescript": "^6.1.0",
 		"@types/node": "^14.14.7",
-		"knex": "^1.0.3",
+		"knex": "^2.0.0",
 		"rimraf": "^3.0.2",
 		"rollup": "^2.32.1",
 		"typescript": "^4.2.4"
 	},
 	"peerDependencies": {
-		"knex": "^1.0.3"
+		"knex": "^1.0.3 || ^2.0.0"
 	},
 	"dependencies": {
 		"@cdellacqua/serializable-error": "^1.1.0"
